objects/SVMXC__Timesheet_Entry__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Link_to_SFDC_Event__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; SVMXC__Salesforce_Event__c, 
                  BLANKVALUE(SVMXC__Salesforce_Event__c, &quot;N/A&quot;)
                )</formula>
        <label>Link to SFDC Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Reported_Service_Time__c</fullName>
        <description>Will be populated for Labor and Travel from the Line Quantity field on the WO Line.  This would be used to show time on the WO and not just a Start/End of the specific Entry</description>
        <label>Reported Service Time</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Productive_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Productive Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_TS_Time_Entry_End_Date__c</fullName>
        <label>Time Entry End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_TS_Time_Entry_Start_Date__c</fullName>
        <label>Time Entry Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_TS_Timesheet_Daily_Summary_Date__c</fullName>
        <label>Timesheet Daily Summary Date</label>
        <type>Date</type>
    </fields>
</CustomObject>